force-app/main/default/objects/Assignment_Group__c/fields/Do_Not_Consider_For_Lead_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Consider_For_Lead_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Consider For Lead Assignment</label>
    <type>Checkbox</type>
</CustomField>