force-app/main/default/objects/Assignment_Group__c/fields/Last_Allocated_RRid__c.field-meta.xml
<CustomField>
    <fullName>Last_Allocated_RRid__c</fullName>
    <label>Last Allocated RRid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>