force-app/main/default/objects/Assignment_Group__c/fields/Lead_Assigning_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigning_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Assigning Criteria</label>
    <referenceTo>Execution_Criteria__c</referenceTo>
    <relationshipLabel>Assignment Groups</relationshipLabel>
    <relationshipName>Assignment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>