force-app/main/default/objects/Assignment_Group__c/fields/Lead_Stage_Exceed_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_Exceed_Count__c</fullName>
    <label>Max Leads for Selected Stage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>