force-app/main/default/objects/Assignment_Group__c/fields/Max_Lead_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Per_Day__c</fullName>
    <label>Max Lead Per Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>